--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
                 android:resource="@xml/shortcuts" />
         </activity>
 
+        <!-- Quick Settings Tiles -->
         <service
             android:name=".services.CreateTaskTileService"
             android:exported="true"
