--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
         android:theme="@style/Theme.CheckMate"
         tools:targetApi="31">
         <activity
-            android:name=".activities.SettingsActivity"
-            android:parentActivityName=".activities.MainActivity"
+            android:name=".ui.activity.SettingsActivity"
+            android:parentActivityName=".ui.activity.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.CreateTaskActivity"
+            android:name=".ui.activity.CreateTaskActivity"
             android:exported="false"
-            android:parentActivityName=".activities.MainActivity" />
+            android:parentActivityName=".ui.activity.MainActivity" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
