--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:name=".services.CreateTaskTileService"
             android:exported="true"
             android:label="@string/tile_new_task"
-            android:icon="@drawable/baseline_add_task_24"
+            android:icon="@drawable/add_task"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE"/>
