--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
@@ -14,9 +13,13 @@
         android:theme="@style/Theme.CheckMate"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.SettingsActivity"
+            android:name=".ui.activity.EditTaskActivity"
             android:parentActivityName=".ui.activity.MainActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.activity.SettingsActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.activity.MainActivity" />
         <activity
             android:name=".ui.activity.CreateTaskActivity"
             android:exported="false"
@@ -34,20 +37,18 @@
             <meta-data
                 android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
-        </activity>
-
-        <!-- Section For Quick Settings Tiles -->
-
+        </activity> <!-- Section For Quick Settings Tiles -->
         <!-- Create New Task tile Service -->
         <service
             android:name=".services.CreateTaskTileService"
             android:exported="true"
-            android:label="@string/tile_new_task"
             android:icon="@drawable/add_task"
+            android:label="@string/tile_new_task"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
     </application>
+
 </manifest>
