--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:theme="@style/Theme.CheckMate"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.EditTaskActivity"
+            android:name=".ui.activity.CompletedTaskActivity"
             android:parentActivityName=".ui.activity.MainActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.activity.EditTaskActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.activity.MainActivity" />
         <activity
             android:name=".ui.activity.SettingsActivity"
             android:exported="false"
